[package]
name = "thenerve"
version = "0.1.0"
authors = ["Varun <contact@vtewari.com>"]
edition = "2021"
license = "MIT"

readme = "README.md"
description = "database schema diff-er"
repository = "https://github.com/otherwisemaximum/thenerve"

keywords = ["database", "migration", "cli"]
categories = ["cli"]

[dependencies]
